add new favicon

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       name="Modern Password Generator"
       content="A modern approach to password generator, built with React and NanoID."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Modern Password Generator</title>
   </head>
